Global.less: search-top fixes, navbar on mobile fixes

--- a/client/app/commons/less/globals.less
+++ b/client/app/commons/less/globals.less
@@ -6,42 +6,50 @@
 @mainThemeColorDark: @deep-purple-700;
 @mainThemeColorAlt: @amber-A700;
 @mainThemeText: #BE90D4;
-@brand-primary:   @mainThemeColor;
+@brand-primary: @mainThemeColor;
 @primary: @mainThemeColor;
-@inverse: @mainThemeColorAlt; // material main color
+@inverse: @mainThemeColorAlt;
+// material main color
 @soundcloud-primary: #FF6D00;
 @songza-primary: #2962FF;
-@transcluent-black: rgba(0,0,0,0.40);
-@text-color:            @lightbg-text;
-@nav-text-color:        @darkbg-text;
+@transcluent-black: rgba(0, 0, 0, 0.40);
+@text-color: @lightbg-text;
+@nav-text-color: @darkbg-text;
 @navbar-height: 60px;
 @mainPlayerHeight: 360px;
-
 
 @screen-lg: 1333px;
 
 @font-face {
   font-family: 'Material-Design-Icons';
-  src:url('../assets/fonts/Material-Design-Icons.eot?3ocs8m');
-  src:url('../assets/fonts/Material-Design-Icons.eot?#iefix3ocs8m') format('embedded-opentype'),
+  src: url('../assets/fonts/Material-Design-Icons.eot?3ocs8m');
+  src: url('../assets/fonts/Material-Design-Icons.eot?#iefix3ocs8m') format('embedded-opentype'),
   url('../assets/fonts/Material-Design-Icons.woff?3ocs8m') format('woff'),
   url('../assets/fonts/Material-Design-Icons.ttf?3ocs8m') format('truetype'),
   url('../assets/fonts/Material-Design-Icons.svg?3ocs8m#Material-Design-Icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
+
 .navbar {
   z-index: 20;
   height: @navbar-height;
   .transition(all 0.5s);
   .transition-timing-function(ease-out);
+
+  .navbar-collapse {
+    background-color: @mainThemeColor;
+  }
 }
+
 .navbar.ng-hide {
   display: block;
   top: -90px;
 }
+
 .center-grid {
-  margin-left: auto; margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   & * {
     text-align: initial;
@@ -51,8 +59,9 @@
 .top-search {
   z-index: 10;
   padding-top: 24px;
-  padding-left: 24px; padding-right: 24px;
-  background-color:  @grey-100;
+  padding-left: 24px;
+  padding-right: 24px;
+  background-color: @grey-100;
   & * {
     font-size: 24px;
   }
@@ -60,12 +69,14 @@
     font-size: 20px;
   }
 }
+
 .navbar-default * {
   color: @nav-text-color;
   & .navbar-brand {
     padding-top: 15px;
   }
 }
+
 .clear-button {
   border: none;
   background-color: transparent;
@@ -74,20 +85,23 @@
 
 .material-transition(@time: 300ms, @prop: all) {
 
--webkit-transition: @prop @time cubic-bezier(.55,0,.1,1);
-  -moz-transition: @prop @time cubic-bezier(.55,0,.1,1);
-  -ms-transition: @prop @time cubic-bezier(.55,0,.1,1);
-  -o-transition: @prop @time cubic-bezier(.55,0,.1,1);
-  transition: @prop @time cubic-bezier(.55,0,.1,1);
+  -webkit-transition: @prop @time cubic-bezier(.55, 0, .1, 1);
+  -moz-transition: @prop @time cubic-bezier(.55, 0, .1, 1);
+  -ms-transition: @prop @time cubic-bezier(.55, 0, .1, 1);
+  -o-transition: @prop @time cubic-bezier(.55, 0, .1, 1);
+  transition: @prop @time cubic-bezier(.55, 0, .1, 1);
 }
+
 .row-no-padding {
   [class*="col-"] {
     padding-left: 0 !important;
     padding-right: 0 !important;
   }
 }
+
 .row {
-  margin-left: 0; margin-right: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .md-dialog-container {
